--- a/.github/workflows/check-react-native-next.yml
+++ b/.github/workflows/check-react-native-next.yml
@@ -32,7 +32,7 @@ jobs:
         run: export RCT_NEW_ARCH_ENABLED=1 && pod install
       - name: Build app
         working-directory: app
-        run: yarn react-native run-ios --no-packager
+        run: yarn react-native run-ios --simulator='iPhone 14' --no-packager
 
   build_android:
     if: github.repository == 'software-mansion/react-native-reanimated'
