--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "type:check:app": "./scripts/test-ts.sh app/src/App.tsx",
     "type:check:tests:common": "./scripts/test-ts.sh __typetests__/common.tsx",
     "type:check:tests:0.72+": "./scripts/test-ts.sh __typetests__/0.72+.tsx",
-    "type:check:all": "yarn type:check:src && yarn type:check:plugin && ./scripts/test-ts.sh app/src/App.tsx __typetests__/common.tsx __typetests__/0.72+.tsx",
+    "type:check:tests:legacy": "./scripts/test-ts.sh __typetests__/legacy.tsx",
+    "type:check:all": "yarn type:check:src && yarn type:check:plugin && ./scripts/test-ts.sh app/src/App.tsx __typetests__/common.tsx __typetests__/0.72+.tsx __typetests__/legacy.tsx",
     "prepare": "yarn plugin && bob build && husky install && yarn app",
     "circular_dependency_check": "yarn madge --extensions js,ts,tsx --circular src lib",
     "setup": "yarn && cd Example && yarn && cd ios && pod install --verbose && cd ../..",
