Runt without packager

--- a/.github/workflows/check-react-native-nightly.yml
+++ b/.github/workflows/check-react-native-nightly.yml
@@ -34,7 +34,7 @@ jobs:
         run: export RCT_NEW_ARCH_ENABLED=1 && pod install
       - name: Build app
         working-directory: app
-        run: yarn react-native run-ios
+        run: yarn react-native run-ios --no-packager
 
   build_android:
     if: github.repository == 'software-mansion/react-native-reanimated'
