--- a/.github/workflows/check-react-native-nightly.yml
+++ b/.github/workflows/check-react-native-nightly.yml
@@ -23,7 +23,7 @@ jobs:
         run: npx react-native init app --skip-install --version nightly
       - name: Install Reanimated
         working-directory: app
-        run: yarn add github:software-mansion/react-native-reanimated
+        run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }}
       - name: Install Paper Pods
         if: ${{ matrix.react-native-architecture == 'Paper' }}
         working-directory: app/ios
@@ -34,7 +34,7 @@ jobs:
         run: export RCT_NEW_ARCH_ENABLED=1 && pod install
       - name: Build app
         working-directory: app
-        run: yarn react-native run-ios --no-packager
+        run: yarn react-native run-ios --simulator='iPhone 14' --no-packager 
 
   build_android:
     if: github.repository == 'software-mansion/react-native-reanimated'
@@ -56,7 +56,7 @@ jobs:
         run: npx react-native init app --skip-install --version nightly
       - name: Install Reanimated
         working-directory: app
-        run: yarn add github:software-mansion/react-native-reanimated
+        run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }}
       - name: Setup Fabric
         if: ${{ matrix.react-native-architecture == 'Fabric' }}
         working-directory: app/android
