Install dependencies before usage of scripts

--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "type:check:tests:common": "./scripts/test-ts.sh __typetests__/common.tsx",
     "type:check:tests:0.72+": "./scripts/test-ts.sh __typetests__/0.72+.tsx",
     "type:check:all": "yarn type:check:src && yarn type:check:plugin && ./scripts/test-ts.sh app/src/App.tsx __typetests__/common.tsx __typetests__/0.72+.tsx",
-    "prepare": "yarn plugin && bob build && husky install && yarn app",
+    "prepare": "yarn --ignore-scripts && yarn plugin && bob build && husky install && yarn app",
     "circular_dependency_check": "yarn madge --extensions js,ts,tsx --circular src lib",
     "setup": "yarn && cd Example && yarn && cd ios && pod install --verbose && cd ../..",
     "clean": "rm -rf node_modules && cd Example && rm -rf node_modules && cd ios && pod deintegrate && cd ../..",
     "reset": "yarn clean && yarn setup",
     "clean:deep": "cd android && rm -rf .cxx .gradle build && cd ../Example/android && rm -rf .gradle build app/build && cd ../.. && yarn clean",
     "reset:deep": "yarn clean:deep && yarn setup",
-    "plugin": "cd plugin && yarn && cd ..",
+    "plugin": "cd plugin && yarn prepare && cd ..",
     "app": "cd app && yarn && cd ..",
     "run-example:ios": "cd Example && yarn && cd ios && pod install && open ReanimatedExample.xcworkspace && cd .. && yarn start --reset-cache",
     "run-example:ios:cold-start": "cd Example && yarn && cd ios && git clean -xdf && pod install && open ReanimatedExample.xcworkspace && cd .. && yarn start --reset-cache",
