--- a/.github/workflows/check-expo-dev-client-nightly.yml
+++ b/.github/workflows/check-expo-dev-client-nightly.yml
@@ -38,7 +38,8 @@ jobs:
         run: npx expo prebuild
       - name: Install Reanimated
         working-directory: app
-        run: npm install github:software-mansion/react-native-reanimated#${{ github.ref }}
+        # run: npm install github:software-mansion/react-native-reanimated#${{ github.ref }}
+        run: npm install github:software-mansion/react-native-reanimated#@piaskoowyk/fix-npm-prepare
       - name: Set Fabric
         if: ${{ matrix.react-native-architecture == 'Fabric' }}
         run: node ${{ env.SCRIPT_PATH }} setupFabricIOS
@@ -76,7 +77,8 @@ jobs:
         run: npx expo prebuild
       - name: Install Reanimated
         working-directory: app
-        run: npm install github:software-mansion/react-native-reanimated
+        # run: npm install github:software-mansion/react-native-reanimated#${{ github.ref }}
+        run: npm install github:software-mansion/react-native-reanimated#@piaskoowyk/fix-npm-prepare
       - name: Set Fabric
         if: ${{ matrix.react-native-architecture == 'Fabric' }}
         run: node ${{ env.SCRIPT_PATH }} setupFabricAndroid
