--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "eslint-plugin-no-inline-styles": "^1.0.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-standard": "^5.0.0",
     "husky": "^7.0.4",
     "jest": "^29.0.0",
