--- a/app/package.json
+++ b/app/package.json
@@ -27,7 +27,7 @@
     "react-native-pager-view": "^5.4.25",
     "react-native-reanimated": "link:../",
     "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "github:software-mansion/react-native-screens#14289cc5cb578f5e0af263d697e71dcf6e21a6e9",
+    "react-native-screens": "file:../react-native-screens-3.27.0.tgz",
     "react-native-svg": "^13.14.0",
     "react-native-web": "~0.18.12"
   },
