--- a/Example/package.json
+++ b/Example/package.json
@@ -24,7 +24,7 @@
     "react-native-gesture-handler": "^2.13.2",
     "react-native-pager-view": "^5.4.25",
     "react-native-reanimated": "link:../",
-    "react-native-safe-area-context": "^4.7.2",
+    "react-native-safe-area-context": "4.7.4",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.14.0"
   },
