--- a/package.json
+++ b/package.json
@@ -117,6 +117,8 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/types": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
+    "@react-navigation/elements": "^1.3.21",
+    "@react-navigation/native": "^6.1.9",
     "@testing-library/jest-native": "^4.0.4",
     "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/react-native": "^7.1.0",
@@ -157,6 +159,8 @@
     "react-native": "0.72.6",
     "react-native-builder-bob": "^0.18.3",
     "react-native-gesture-handler": "^2.13.2",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
     "react-native-web": "~0.18.12",
     "react-test-renderer": "17.0.2",
     "shelljs": "^0.8.5",
