Force common interface

--- a/Example/android/gradle.properties
+++ b/Example/android/gradle.properties
@@ -44,3 +44,5 @@ newArchEnabled=false
 hermesEnabled=true
 
 disableMultipleInstancesCheck=true
+useCommonInterfaceFromReanimated=true # temporary workaround for RNScreens, we can remove it after release of 3.6.0 or 3.7.0
+
