Make checks run  quiet

--- a/package.json
+++ b/package.json
@@ -165,7 +165,7 @@
   },
   "lint-staged": {
     "*.(js|ts|tsx)": [
-      "eslint --ext '.js,.ts,.tsx' src/ --ignore-pattern docs --ignore-pattern plugin --ignore-pattern .eslintrc.js --ignore-pattern jest.config.js --ignore-pattern __typetests__",
+      "eslint --quiet --ext '.js,.ts,.tsx' src/ --ignore-pattern docs --ignore-pattern plugin --ignore-pattern .eslintrc.js --ignore-pattern jest.config.js --ignore-pattern __typetests__",
       "prettier --write"
     ],
     "plugin/**/*.ts": "yarn lint:plugin",
