--- a/package.json
+++ b/package.json
@@ -165,8 +165,8 @@
   },
   "lint-staged": {
     "*.(js|ts|tsx)": [
-      "eslint --quiet --ext '.js,.ts,.tsx' src/ --ignore-pattern docs --ignore-pattern plugin --ignore-pattern .eslintrc.js --ignore-pattern jest.config.js --ignore-pattern __typetests__",
-      "prettier --write"
+      "eslint --ignore-pattern docs --ignore-pattern plugin --ignore-pattern .eslintrc.js --ignore-pattern jest.config.js --ignore-pattern __typetests__",
+            "prettier --write"
     ],
     "plugin/**/*.ts": "yarn lint:plugin",
     "**/*.{h,cpp}": "yarn lint:cpp",
